syntax = "proto3";

package dnf.v1;

option go_package = "github.com/pixb/DnfGameServer/dnf-go-client/gen/dnf/v1;dnfv1";

import "dnf/v1/common.proto";
import "dnf/v1/option_types.proto";

// 系统消息类型
message RES_SERVER_RESPONSE_PACKET {
  int32 error = 1;
}

message RES_SECEDE_GUILD {
  int32 error = 1;
  string message = 2;
}

message RES_SAVE_WEAK_SERVER_SIMPLE_DATA {
  int32 error = 1;
  bytes data = 2;
}

message RES_SEND_GUILD_REDPACKET {
  int32 error = 1;
  int64 guildId = 2;
  string redpacketId = 3;
  int32 amount = 4;
}

message RES_SEND_STORAGE {
  int32 error = 1;
  int32 storageId = 2;
  int32 itemCount = 3;
}

// 系统消息补充类型
message RES_SERVER_RESPONSE_PACKET_SUPPLEMENT {
  int32 error = 1;
  string message = 2;
  int32 code = 3;
}

message RES_SECEDE_GUILD_DETAIL {
  int32 error = 1;
  string message = 2;
  int64 guildId = 3;
  string guildName = 4;
}

message RES_SAVE_WEAK_SERVER_FULL_DATA {
  int32 error = 1;
  bytes data = 2;
  int64 timestamp = 3;
  string signature = 4;
}

message RES_SEND_GUILD_REDPACKET_DETAIL {
  int32 error = 1;
  int64 guildId = 2;
  string redpacketId = 3;
  int32 amount = 4;
  string senderName = 5;
  int32 participantCount = 6;
}

message RES_SEND_STORAGE_COMPLETE {
  int32 error = 1;
  int32 storageId = 2;
  int32 itemCount = 3;
  bool success = 4;
  string message = 5;
}
